--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -55,3 +55,15 @@
 .is-hidden {
   display: none;
 }
+
+// .cat-info {
+//   //display: flex;
+//   //gap: 30px;
+//   //margin: 30px auto;
+// }
+
+.descr{
+  display: flex;
+  flex-direction: column;
+}
+
