--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -56,11 +56,11 @@
   display: none;
 }
 
-// .cat-info {
-//   //display: flex;
-//   //gap: 30px;
-//   //margin: 30px auto;
-// }
+.cat-info {
+  display: block;
+  //gap: 30px;
+  margin: 30px auto;
+}
 
 .descr{
   display: flex;
