add style for descr

--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -56,10 +56,10 @@
   display: none;
 }
 
-.cat-info {
-  display: block;
+.cat-info{
   //gap: 30px;
   margin: 30px auto;
+  text-align: center;
 }
 
 .descr{
