--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -60,9 +60,10 @@
   //gap: 30px;
   margin: 30px auto;
   text-align: center;
+  display: flex;
 }
 
-.descr{
+.info{
   display: flex;
   flex-direction: column;
 }
