--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -28,43 +28,45 @@
 }
 
 
-// .loader {
-//   width: 48px;
-//   height: 48px;
-//   border: 5px solid #211c1c;
-//   border-bottom-color: #FF3D00;
-//   border-radius: 50%;
-//   display: inline-block;
-//   box-sizing: border-box;
-//   display: flex;
-//   animation: rotation 1s linear infinite;
-//   //margin-right: 50%;
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #211c1c;
+  border-bottom-color: #FF3D00;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  display: flex;
+  animation: rotation 1s linear infinite;
+  //margin-right: 50%;
 
-// }
+}
 
-// @keyframes rotation {
-//   0% {
-//     transform: rotate(0deg);
-//   }
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
 
-//   100% {
-//     transform: rotate(360deg);
-//   }
-// }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
-// .is-hidden {
-//   display: none;
-// }
+.is-hidden {
+  display: none;
+}
 
-// .cat-info{
-//   //gap: 30px;
-//   margin: 30px auto;
-//   text-align: center;
-//   //display: flex;
-// }
+.cat-info{
+  gap: 30px;
+  margin: 30px auto;
+  text-align: center;
+  display: flex;
+}
 
-// .info{
-//   display: flex;
-//   flex-direction: column;
-// }
+.info{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
